<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileNetworkingProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="title_scanner_frequency_settings">ScannerFrequencySettings</string>
    <string name="title_interval_scanning_settings">IntervalScanningSettings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scanner_frequency_settings">Scanner Frequency Settings</string>
    <string name="interval_setting">Interval Settings</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="Interval_in_min">Interval (in Min.)</string>
    <string name="new_interval_value_saved">New Interval Value Saved!</string>
    <string name="new_scanner_frequency_setting_saved">New Scanner Frequency Setting Saved!</string>
    <string name="new_bluetooth_setting_saved">New Bluetooth Setting Saved!</string>
    <string name="update_file">Update File</string>
    <string name="sync_data">Sync Data to Network</string>
    <string name="data_synced">Data Synced to Network</string>
    <string name="save_changes">Save</string>
    <string name="title_bluetooth_not_supported">Bluetooth Not Supported</string>
    <string name="message_selected_bluetooth_not_supported">Sorry, this device does not supports the selected Bluetooth version.</string>
    <string name="message_bluetooth_not_supported">Sorry, this device does not supports Bluetooth. Application will exit now.</string>
    <string name="ok">Ok</string>
    <string name="title_manual_sync">Manual Sync!</string>
    <string name="view_network_backup_data">View Backup</string>
    <string name="join_network">Join Network!</string>
    <string name="leave_network">Leave Network!</string>
    <string name="no_backup_files_found">No Backed up data found</string>
    <string name="title_delete_backup">Delete Backup</string>
    <string name="bluetooth_permission_denied">Cannot start Syncing, bluetooth not enabled!</string>
    <string name="join_network_msg">Join Network to Sync Data</string>
    <string name="exit_app">Exit</string>
    <string name="continuousscanning">Continuous Scanning</string>
    <string name="intervalscanning">Interval Scanning</string>
    <string name="manualscanning">Manual Scanning</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_ble">Bluetooth_BLE</string>

    <!--
    <string-array name="scanner_frequency_settings_options">
        <item>Continuous Scanning</item>
        <item>Interval Scanning</item>
        <item>Manual Scanning</item>
    </string-array>
    -->

    <string name="title_activity_edit_file_activity">EditFileACtivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_backup">ViewBackupActivity</string>
    <string name="title_activity_view_backup_file_data">ViewBackupFileDataActivity</string>

</resources>
