<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/title_manual_scan"
        android:orderInCategory="100"
        android:title="@string/title_manual_sync">
    </item>
    <item android:id="@+id/title_scanner_frequency_settings"
        android:orderInCategory="100"
        android:title="@string/title_scanner_frequency_settings">
    </item>
    <item android:id="@+id/title_interval_scanning_settings"
        android:orderInCategory="100"
        android:title="@string/title_interval_scanning_settings">
    </item>
    <item android:id="@+id/title_bluetooth_settings"
        android:orderInCategory="100"
        android:title="@string/bluetooth_settings">
    </item>
    <item android:id="@+id/view_network_backup_data"
        android:orderInCategory="100"
        android:title="@string/view_network_backup_data">
    </item>
    <item android:id="@+id/exit_app"
        android:orderInCategory="100"
        android:title="@string/exit_app">
    </item>

</menu>
